--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Ayoub Bni-bourk — Portfolio</title>
-  <meta name="description" content="Automation & DCS Engineer — PLC programming, commissioning, industrial networks. WorldSkills Mechatronics bronze medalist.">
-  <meta property="og:title" content="Ayoub Bni-Bourk — Automation & DCS Engineer">
+  <meta name="description" content="Automation & DCS Specialist — PLC programming, commissioning, industrial networks. WorldSkills Mechatronics bronze medalist.">
+  <meta property="og:title" content="Ayoub Bni-Bourk — Automation & DCS Specialist">
   <meta property="og:description" content="DCS (CENTUM VP, DeltaV), PLC systems, commissioning, industrial networks.">
   <meta property="og:type" content="website">
   <link rel="icon" href="favicon.ico">
@@ -338,3 +338,4 @@
 
 </body>
 </html>
+
